M23-S5: preserve deterministic traversal node ordering