@@ -3,10 +3,12 @@ package com.morpheus.application.portfolio;
 import com.morpheus.domain.portfolio.CrossProjectReference;
 import com.morpheus.domain.portfolio.PortfolioEntityRef;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.TreeMap;
 
 public record PortfolioTraversalResult(
         PortfolioEntityRef start,
@@ -15,7 +17,8 @@ public record PortfolioTraversalResult(
         Optional<String> truncationReason) {
     public PortfolioTraversalResult {
         Objects.requireNonNull(start, "start");
-        depthByNode = Map.copyOf(Objects.requireNonNull(depthByNode, "depthByNode"));
+        depthByNode = Collections.unmodifiableMap(
+                new TreeMap<>(Objects.requireNonNull(depthByNode, "depthByNode")));
         links = Objects.requireNonNull(links, "links").stream().sorted().toList();
         truncationReason = Objects.requireNonNull(truncationReason, "truncationReason");
         if (!depthByNode.containsKey(start) || depthByNode.get(start) != 0) {
